--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 # Bumi Kita Negeri Kita AR
 
-Aplikasi **Bumi Kita Negeri Kita AR** adalah platform interaktif berbasis Augmented Reality (AR) yang dirancang untuk mendukung buku _Bumi Kita Negeri Kita_. Dengan memanfaatkan kamera ponsel, pengguna dapat memindai halaman tertentu dalam buku dan melihat animasi 3D, suara narasi, serta konten digital menarik lainnya yang membuat proses belajar tentang geografi, budaya, dan kekayaan Indonesia menjadi lebih hidup dan menyenangkan.
+Jelajahi keajaiban Indonesia secara langsung dari halaman buku! **Bumi Kita Negeri Kita AR** adalah aplikasi revolusioner yang membawa buku _Bumi Kita Negeri Kita_ ke level berikutnya. Dengan memanfaatkan kamera ponsel, pengguna dapat memindai halaman tertentu dan melihat konten digital berupa **animasi 3D interaktif**, **narasi audio**, dan elemen visual menarik lainnya. Platform ini membuat proses belajar tentang geografi, budaya, dan kekayaan alam Indonesia menjadi petualangan yang tak terlupakan dan mudah dipahami.
 
 ---
 
 ### Fitur Utama
 
-* **Pindai dan Tampilkan:** Pindai halaman buku _Bumi Kita Negeri Kita_ untuk memunculkan konten digital.
-* **Konten 3D Interaktif:** Saksikan animasi objek 3D yang membuat materi pelajaran menjadi lebih nyata.
-* **Belajar Menyenangkan:** Ubah pengalaman membaca buku menjadi petualangan interaktif.
+* **Pindai dan Hidupkan:** Integrasi konten digital ke dalam buku fisik melalui teknologi AR.
+* **Visualisasi 3D Interaktif:** Tampilkan objek dan konsep 3D untuk meningkatkan pemahaman dan daya tarik.
+* **Pengalaman Belajar:** Tawarkan metode pembelajaran interaktif untuk meningkatkan *engagement* pengguna.
 
 ---
 
@@ -25,5 +25,3 @@ Aplikasi **Bumi Kita Negeri Kita AR** adalah platform interaktif berbasis Augmen
 
 * Perangkat Android.
 * Salinan fisik buku **Bumi Kita Negeri Kita**.
-
----
